[package]
name = "keystore-loader"
version = "0.1.0"
authors = ["Zhuowei Zhang <zhuowei@worthdoingbadly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = "0.20"
